--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -1,4 +1,4 @@
-name: Deploy website
+name: Job Artifacts and Caches
 on:
   push:
     branches:
@@ -25,9 +25,19 @@ jobs:
         run: npm ci
       - name: Build website
         run: npm run build
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: build-files
+          path: dist
   deploy:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - name: Deploy
-        run: echo "Deploying..."
+      - name: Download Artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: build-files
+          path: dist
+      - name: List build-files
+        run: ls -R
